# diffmatrix

./: .gitmodules  CMakeLists.txt  README.md  getdeps.py
diffmatrix/: CMakeLists.txt  main.cpp
diffmatrix.xcodeproj/: project.pbxproj
diffmatrix.xcodeproj/xcuserdata/mbrazeau.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  a.out  main.cpp
test_files/: King_2023.nex  MATRIX_MASTER_DEPRECATED.nex  zhu_2023.nex
