cmake_minimum_required (VERSION 3.1)
project(diffmatrix)
set(EXENAME "diffmatrix")
include_directories(${CMAKE_SOURCE_DIR}/ncl/ncl ${CMAKE_SOURCE_DIR}/ncl)
set(PATH_LIB_NCL "ncl_static")
if(MSVC)
  # Force to always compile with W4
  if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
  endif()
  add_definitions(/D_CRT_SECURE_NO_WARNINGS)
else()
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
  set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
endif()

add_subdirectory(${CMAKE_SOURCE_DIR}/ncl)
add_executable(${EXENAME} ${CMAKE_SOURCE_DIR}/src/main.cpp)
target_link_libraries(${EXENAME} ${PATH_LIB_NCL})
if (MSVC)
    target_link_libraries(${EXENAME} edit_static)
    include_directories(${CMAKE_SOURCE_DIR}/../external/wineditline/include)
else()
    target_link_libraries(${EXENAME} ${PATH_LIB_EDIT})
endif()
