set(EXENAME "diffmatrix")
add_executable(${EXENAME} main.cpp)
add_executable(${EXENAME} ${nui_SRC})
target_link_libraries(${EXENAME} ${PATH_LIB_NCL})
if (MSVC)
    target_link_libraries(${EXENAME} edit_static)
    include_directories(${CMAKE_SOURCE_DIR}/../external/wineditline/include)
else()
    target_link_libraries(${EXENAME} ${PATH_LIB_EDIT})
endif()
